--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
-    westnet-web:
-        container_name: westnet-web
+    rex-web:
+        container_name: rex-web
         build: web-server
         volumes:
             - ../.:/var/www/html
@@ -11,11 +11,11 @@ services:
         networks:
             - docker-net
 
-    westnet-data:
-        container_name: westnet-data
+    rex-data:
+        container_name: rex-data
         image: mariadb:10.0
         volumes:
-            - /home/ram/westnet:/var/lib/mysql
+            - /home/ram/rex:/var/lib/mysql
         ports:
             - "8183:3306"
         environment:
@@ -23,25 +23,25 @@ services:
         networks:
             - docker-net
 
-    westnet-myadmin:
-        container_name: westnet-myadmin
+    rex-myadmin:
+        container_name: rex-myadmin
         image: phpmyadmin/phpmyadmin
         ports:
             - "8182:80"
         environment:
-            PMA_HOST: 'westnet-data'
+            PMA_HOST: 'rex-data'
             PMA_USER: 'root'
             PMA_PASSWORD: 'secret'
         networks:
             - docker-net
 
-    westnet-pdf:
-        container_name: westnet-pdf
-        build: pdf-service
-        ports:
-            - "8184:5001"
-        networks:
-            - docker-net
+    #rex-pdf:
+     #   container_name: rex-pdf
+      #  build: pdf-service
+       # ports:
+        #    - "8184:5001"
+       # networks:
+        #    - docker-net
 
 networks:
     docker-net:
@@ -50,11 +50,11 @@ networks:
 
 
 
-    #westnet-selenium:
+    #rex-selenium:
     #    image: selenium/standalone-chrome
-    #    container_name: westnet-selenium
+    #    container_name: rex-selenium
     #    ports:
     #        - "8184:4444"
     #        - "8189:5900"
     #    links:
-    #        - westnet-web
+    #        - rex-web
