Test de PaymentCard y PaymentCardFile

--- a/config/test.php.sample
+++ b/config/test.php.sample
@@ -114,6 +114,9 @@ $config = [
                         'modules/user-management/front' => 'modules/user-management/front.php',
                     ],
                 ],
+                 'cobrodigital' => [
+                                    'class' => 'yii\i18n\PhpMessageSource',
+                ],
             ],
         ],
         'formatter' => [
