--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "2amigos/yii2-ckeditor-widget": "^2.1",
         "yiisoft/yii2-codeception": "^2.0",
         "joshtronic/php-loremipsum": "^1.0",
-        "kartik-v/yii2-editable": "dev-master"
+        "kartik-v/yii2-editable": "dev-master",
+        "conquer/oauth2": "^1.7"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
