--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "yiisoft/yii2-codeception": "^2.0",
         "joshtronic/php-loremipsum": "^1.0",
         "kartik-v/yii2-editable": "dev-master",
-        "conquer/oauth2": "^1.7"
+        "conquer/oauth2": "^1.7",
+        "light/yii2-swagger": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
