--- a/tests/ivrapi.suite.yml
+++ b/tests/ivrapi.suite.yml
@@ -2,3 +2,12 @@ actor: IvrapiTester
 modules:
     enabled:
         - \Helper\Ivrapi
+        - REST:
+           url: ivr/v1
+           depends: Yii2
+           part: Json
+        - Yii2
+    config:
+      - Yii2
+          configFile: ../config/test.php
+          part: [orm, fixtures]
