--- a/tests/ivrapi.suite.yml
+++ b/tests/ivrapi.suite.yml
@@ -3,7 +3,7 @@ modules:
     enabled:
         - \Helper\Ivrapi
         - REST:
-           url: ivr/v1
+           url: http://localhost:8081/web/index.php?r=ivr/v1
            depends: Yii2
            part: Json
         - Yii2
