Horario de instalacion valor por defecto. Fix cambio de velocidad

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,6 +21,7 @@ services:
             - "8183:3306"
         environment:
             MYSQL_ROOT_PASSWORD: 'secret'
+        command: mysqld --sql_mode="STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
         networks:
             - docker-net
 
