--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "kartik-v/yii2-editable": "dev-master",
         "conquer/oauth2": "^1.7",
         "light/yii2-swagger": "^1.0",
-        "lavrentiev/yii2-toastr": "^2.0"
+        "lavrentiev/yii2-toastr": "^2.0",
+        "yiisoft/yii2-redis": "~2.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
