--- a/composer.json
+++ b/composer.json
@@ -43,14 +43,14 @@
         "bower-asset/chartjs": "^2.0",
         "yiier/yii2-chartjs-widget": "^1.1",
         "phpoffice/phpexcel": "^1.8",
-        "2amigos/yii2-ckeditor-widget": "^2.1",
         "yiisoft/yii2-codeception": "^2.0",
         "joshtronic/php-loremipsum": "^1.0",
         "kartik-v/yii2-editable": "dev-master",
         "conquer/oauth2": "^1.7",
         "light/yii2-swagger": "^1.0",
         "lavrentiev/yii2-toastr": "^2.0",
-        "yiisoft/yii2-redis": "~2.0.0"
+        "yiisoft/yii2-redis": "~2.0.0",
+        "2amigos/yii2-ckeditor-widget": "2.2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
