Cambio carpeta de docker x gestion2

--- a/gestion2/docker-compose.yml
+++ b/gestion2/docker-compose.yml
@@ -1,23 +1,22 @@
 version: '2'
 services:
     rex-web:
-        container_name: rex-web
+        container_name: gestion2-web
         build: web-server
         volumes:
             - ../.:/var/www/html
         ports:
-            - "8180:80"
-            - "8181:443"
+            - "8300:80"
         networks:
             - docker-net
 
     rex-data:
-        container_name: rex-data
+        container_name: gestion2-data
         image: mariadb:10.0
         volumes:
-            - /home/ram/rex:/var/lib/mysql
+            - /media/napear/_DATA/mysql/gestion2:/var/lib/mysql
         ports:
-            - "8183:3306"
+            - "8100:3306"
         environment:
             MYSQL_ROOT_PASSWORD: 'secret'
         command: mysqld --sql_mode="STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
@@ -25,10 +24,10 @@ services:
             - docker-net
 
     rex-myadmin:
-        container_name: rex-myadmin
+        container_name: gestion2-myadmin
         image: phpmyadmin/phpmyadmin
         ports:
-            - "8182:80"
+            - "8200:80"
         environment:
             PMA_HOST: 'rex-data'
             PMA_USER: 'root'
