--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "Arya",
     "description": "Stock management system",
     "keywords": ["stock", "manager"],
-    "homepage": "https://westnet.com.ar",
+    "homepage": "https://bigway.com.ar",
     "type": "project",
     "license": "Comercial",
     "support": {
