--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,7 @@
-RewriteEngine On
 
-RewriteCond %{REQUEST_URI} !index.php
+RewriteEngine on
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^.*$ index.php
+
+RewriteRule . index.php
