--- a/.gitignore
+++ b/.gitignore
@@ -99,5 +99,5 @@ web/direct_debit_import/
 web/firstdataExports/
 web/firstdataImports/
 
-# docker
-docker/gestion_westnet/*
+gestion-data
+docker/web-server/gestion.sample.conf
