--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,23 +1,24 @@
 version: '2'
 services:
     rex-web:
-        container_name: rex-web
+        container_name: gestion-web
         build: web-server
         volumes:
             - ../.:/var/www/html
         ports:
-            - "8180:80"
-            - "8181:443"
+            - "8100:80"
+            #- "7171:443"
         networks:
             - docker-net
 
     rex-data:
-        container_name: rex-data
+        container_name: gestion-data
         image: mariadb:10.0
         volumes:
             - /home/ram/rex:/var/lib/mysql
+            #- ../../gestion-data:/var/lib/mysql
         ports:
-            - "8183:3306"
+            - "8201:3306"
         environment:
             MYSQL_ROOT_PASSWORD: 'secret'
         command: mysqld --sql_mode="STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
@@ -25,12 +26,12 @@ services:
             - docker-net
 
     rex-myadmin:
-        container_name: rex-myadmin
+        container_name: gestion-myadmin
         image: phpmyadmin/phpmyadmin
         ports:
-            - "8182:80"
+            - "8301:80"
         environment:
-            PMA_HOST: 'rex-data'
+            PMA_HOST: 'gestion-data'
             PMA_USER: 'root'
             PMA_PASSWORD: 'secret'
         networks:
