--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,7 @@ web/firstdataImports/
 # @emi ignores
 # docker
 gestion_westnet
+docker/web-server/gestion.conf
 
 # @gabi ignores
 gestion-data
