Agrego archivo init para inicializar proyectos para westnet o bigway, cada uno con su correspondiente carpeta docker para levantar cotenedores, ademas se agrega un docker_sample para tener uno configurado de manera incial, y se modifican .htaccess para acceder a la carpeta web/index.php

--- a/.gitignore
+++ b/.gitignore
@@ -99,5 +99,6 @@ web/direct_debit_import/
 web/firstdataExports/
 web/firstdataImports/
 
-gestion-data
-docker/web-server/gestion.sample.conf
+gestion-data/
+!environments/docker_gestion_westnet
+!environments/docker_gestion_bigway
