--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,7 +1,6 @@
+RewriteEngine On
 
-RewriteEngine on
-
+RewriteCond %{REQUEST_URI} !index.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
-RewriteRule . index.php [L]
+RewriteRule ^.*$ index.php
