--- a/docker_sample/docker-compose.yml
+++ b/docker_sample/docker-compose.yml
@@ -1,45 +1,25 @@
 version: '2'
 services:
     rex-web:
-<<<<<<< HEAD:gestion2/docker-compose.yml
-        container_name: gestion2-web
-=======
         container_name: gestion-web
->>>>>>> desarrollo:docker/docker-compose.yml
         build: web-server
         volumes:
             - ../.:/var/www/html
         ports:
-<<<<<<< HEAD:gestion2/docker-compose.yml
-            - "8300:80"
-=======
             - "8100:80"
             #- "7171:443"
->>>>>>> desarrollo:docker/docker-compose.yml
         networks:
             - docker-net
 
     rex-data:
-<<<<<<< HEAD:gestion2/docker-compose.yml
-        container_name: gestion2-data
-        image: mariadb:10.0
-        volumes:
-            - /media/napear/_DATA/mysql/gestion2:/var/lib/mysql
-        ports:
-            - "8100:3306"
-=======
+
         container_name: gestion-data
         image: mariadb:10.0
         volumes:
-            - /home/ram/rex:/var/lib/mysql
-            #- ../../gestion-data:/var/lib/mysql
+            #gestion-westnet-data or gestion-bigway-data
+            - ../gestion-data:/var/lib/mysql
         ports:
-<<<<<<< HEAD:gestion2/docker-compose.yml
-            - "8201:3306"
->>>>>>> desarrollo:docker/docker-compose.yml
-=======
             - "8200:3306"
->>>>>>> gbermudez:docker_sample/docker-compose.yml
         environment:
             MYSQL_ROOT_PASSWORD: 'secret'
         command: mysqld --sql_mode="STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
@@ -47,21 +27,10 @@ services:
             - docker-net
 
     rex-myadmin:
-<<<<<<< HEAD:gestion2/docker-compose.yml
-        container_name: gestion2-myadmin
-        image: phpmyadmin/phpmyadmin
-        ports:
-            - "8200:80"
-=======
         container_name: gestion-myadmin
         image: phpmyadmin/phpmyadmin
         ports:
-<<<<<<< HEAD:gestion2/docker-compose.yml
-            - "8301:80"
->>>>>>> desarrollo:docker/docker-compose.yml
-=======
             - "8300:80"
->>>>>>> gbermudez:docker_sample/docker-compose.yml
         environment:
             PMA_HOST: 'gestion-data'
             PMA_USER: 'root'
