Subo modificacion en el docker-compose.yml para crear el volumen de datos en la carpeta /var/vol_db

--- a/docker_sample/docker-compose.yml
+++ b/docker_sample/docker-compose.yml
@@ -16,8 +16,8 @@ services:
         container_name: gestion-data
         image: mariadb:10.0
         volumes:
-            #gestion-westnet-data or gestion-bigway-data
-            - ../gestion-data:/var/lib/mysql
+            #gestion-data-westnet or gestion-data-bigway
+            - /var/vol_db/gestion-data:/var/lib/mysql
         ports:
             - "8200:3306"
         environment:
