Subo archivo composer.json modificado en la libreria ICanBoogie, escrita todo en minuscula, la version de fullcalendar, no puede ser la ultima, esta rota esta, por lo que se instala la 3.9.0, y en el name del archivo se agrega la palabra 'vendor_name' para evitar errores de nomeclatura

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Arya",
+    "name": "vendor_name/arya",
     "description": "Stock management system",
     "keywords": ["stock", "manager"],
     "homepage": "https://bigway.com.ar",
@@ -28,11 +28,11 @@
         "kartik-v/yii2-widgets": "*",
         "webvimark/module-user-management": "*",
         "boundstate/yii2-htmlconverter": "dev-master",
-        "philippfrenzel/yii2fullcalendar": "*",
+        "philippfrenzel/yii2fullcalendar": "3.9.0",
         "kartik-v/yii2-widget-timepicker": "dev-master",
         "kartik-v/yii2-date-range": "*",
         "yiisoft/yii2-imagine": "~2.0.0",
-        "ICanBoogie/Inflector": "*",
+        "icanboogie/inflector": "1.4.*",
         "kartik-v/yii2-nav-x": "1.2.0",
         "yiisoft/yii2-httpclient": "*",
         "linslin/yii2-curl": "*",
