--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "kartik-v/yii2-nav-x": "1.2.*",
         "yiisoft/yii2-httpclient": "2.0.*",
         "linslin/yii2-curl": "1.2.*",
-        "kartik-v/yii2-mpdf": "1.0.*",
+        "kartik-v/yii2-mpdf": "dev-master",
         "kartik-v/yii2-dialog": "1.0.*",
         "bower-asset/bootstrap": "3.3.*",
         "npm-asset/jquery": "2.2.*",
@@ -51,7 +51,8 @@
         "lavrentiev/yii2-toastr": "2.0.*",
         "yiisoft/yii2-redis": "2.0.*",
         "2amigos/yii2-ckeditor-widget": "2.2.*",
-        "markrogoyski/ipv4-subnet-calculator": "3.*"
+        "markrogoyski/ipv4-subnet-calculator": "3.*",
+        "picqer/php-barcode-generator": "^0.3.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "2.0.*",
