--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "yiisoft/yii2-redis": "2.0.*",
         "2amigos/yii2-ckeditor-widget": "2.2.*",
         "markrogoyski/ipv4-subnet-calculator": "3.*",
-        "picqer/php-barcode-generator": "^0.3.0"
+        "picqer/php-barcode-generator": "^0.3.0",
+        "2amigos/qrcode-library": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "2.0.*",
