Subo composer.json modificado para evitar conflictos de librerias

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "Arya",
+    "name": "vendor_name/arya",
     "description": "Stock management system",
     "keywords": ["stock", "manager"],
-    "homepage": "https://westnet.com.ar",
+    "homepage": "https://bigway.com.ar",
     "type": "project",
     "license": "Comercial",
     "support": {
@@ -15,52 +15,55 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*",
-        "yiisoft/yii2-jui": "*",
-        "hackzilla/barcode-bundle": "~1.0",
-        "2amigos/yii2-chartjs-widget": "*",
-        "2amigos/yii2-tinymce-widget": "~1.1",
-        "kartik-v/yii2-grid": "@dev",
-        "kartik-v/yii2-krajee-base": "@dev",
-        "kartik-v/yii2-export": "~1.3",
-        "kartik-v/yii2-widgets": "*",
-        "webvimark/module-user-management": "*",
+        "yiisoft/yii2": "2.0.15.*",
+        "yiisoft/yii2-bootstrap": "2.0.*",
+        "yiisoft/yii2-swiftmailer": "2.0.*",
+        "yiisoft/yii2-jui": "2.0.*",
+        "hackzilla/barcode-bundle": "1.4.*",
+        "2amigos/yii2-chartjs-widget": "2.1.*",
+        "2amigos/yii2-tinymce-widget": "1.1.*",
+        "kartik-v/yii2-grid": "3.2.*",
+        "kartik-v/yii2-krajee-base": "2.0.*",
+        "kartik-v/yii2-export": "1.3.*",
+        "kartik-v/yii2-widgets": "3.4.1",
+        "webvimark/module-user-management": "1.0.*",
         "boundstate/yii2-htmlconverter": "dev-master",
-        "philippfrenzel/yii2fullcalendar": "*",
+        "philippfrenzel/yii2fullcalendar": "3.9.*",
         "kartik-v/yii2-widget-timepicker": "dev-master",
         "kartik-v/yii2-date-range": "*",
-        "yiisoft/yii2-imagine": "~2.0.0",
-        "ICanBoogie/Inflector": "*",
-        "kartik-v/yii2-nav-x": "1.2.0",
-        "yiisoft/yii2-httpclient": "*",
-        "linslin/yii2-curl": "*",
-        "kartik-v/yii2-mpdf": "~1.0",
-        "kartik-v/yii2-dialog": "~1.0",
-        "bower-asset/bootstrap": "^3.3",
-        "npm-asset/jquery": "^2.2",
-        "bower-asset/chartjs": "^2.0",
-        "yiier/yii2-chartjs-widget": "^1.1",
-        "phpoffice/phpexcel": "^1.8",
-        "yiisoft/yii2-codeception": "^2.0",
-        "joshtronic/php-loremipsum": "^1.0",
+        "yiisoft/yii2-imagine": "2.0.*",
+        "icanboogie/inflector": "1.4.*",
+        "kartik-v/yii2-nav-x": "1.2.*",
+        "yiisoft/yii2-httpclient": "2.0.*",
+        "linslin/yii2-curl": "1.2.*",
+        "kartik-v/yii2-mpdf": "dev-master",
+        "kartik-v/yii2-dialog": "1.0.*",
+        "bower-asset/bootstrap": "3.3.*",
+        "npm-asset/jquery": "2.2.*",
+        "bower-asset/chartjs": "2.7.*",
+        "yiier/yii2-chartjs-widget": "1.3.*",
+        "phpoffice/phpexcel": "1.8.*",
+        "yiisoft/yii2-codeception": "2.0.*",
+        "joshtronic/php-loremipsum": "1.0.*",
         "kartik-v/yii2-editable": "dev-master",
-        "conquer/oauth2": "^1.7",
-        "light/yii2-swagger": "^1.0",
-        "lavrentiev/yii2-toastr": "^2.0",
-        "yiisoft/yii2-redis": "~2.0.0",
-        "2amigos/yii2-ckeditor-widget": "2.2.0",
-        "markrogoyski/ipv4-subnet-calculator": "3.*"
+        "conquer/oauth2": "1.7.*",
+        "light/yii2-swagger": "1.0.*",
+        "lavrentiev/yii2-toastr": "2.0.*",
+        "yiisoft/yii2-redis": "2.0.*",
+        "2amigos/yii2-ckeditor-widget": "2.2.*",
+        "markrogoyski/ipv4-subnet-calculator": "3.*",
+        "picqer/php-barcode-generator": "^0.3.0",
+        "2amigos/qrcode-library": "^1.1",
+        "kartik-v/yii2-field-range": "*"
     },
     "require-dev": {
-        "yiisoft/yii2-debug": "*",
-        "yiisoft/yii2-gii": "*",
+        "yiisoft/yii2-debug": "2.0.*",
+        "yiisoft/yii2-gii": "2.0.*",
         "yiisoft/yii2-faker": "^2.0",
-        "codeception/codeception": "2.5.1",
-        "codeception/specify": "*",
-        "codeception/verify": "*",
-        "phpunit/phpunit": "*"
+        "codeception/codeception": "2.5.*",
+        "codeception/specify": "0.4.*",
+        "codeception/verify": "0.4.*",
+        "phpunit/phpunit": "5.7.*"
     },
     "suggest": {
         "codeception/codeception": "Codeception, 1.8.*@dev is currently works well with Yii.",
