--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,12 @@ docker_gestion_*
 
 composer.lock
 composer.json
+
+# firstdata *con redundancia extra
+web/firstdata_exports/
+web/firstdata_imports/
+.*
+composer.lock*
+composer.json*
+composer.lock
+web/uploads/*
